viewer img max-width to prevent too large images

--- a/markdown-default.css
+++ b/markdown-default.css
@@ -9,3 +9,7 @@ p {
 
     line-height: 150%;
 }
+
+img {
+    max-width: 100%;
+}
